// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/SearchField Defaults play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rd:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:rd:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rd:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rd:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rd:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rd:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rf:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rf:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r26:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r26:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r26:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r26:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r26:-input"
               class="_input_hryzl_42"
               accesskey="j"
               aria-describedby="searchField-:r26:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r28:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r28:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithArrowKeyNavigation play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r23:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r23:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r23:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r23:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r23:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r23:-srFocus"
               type="search"
               value
               aria-owns="searchField-:r23:-results"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
          5 forslag vises.
        </span>
        <div>
          <ul id="searchField-:r23:-results"
              class="_searchResultContainer_hryzl_167"
              role="listbox"
              aria-labelledby="searchField-:r23:-label"
          >
            <li class="_searchResult_1ae64_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <span class="_searchResultTitle_1ae64_28">
              </span>
              Hydrogen
            </li>
            <li class="_searchResult_1ae64_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <span class="_searchResultTitle_1ae64_28">
              </span>
              Helium
            </li>
            <li class="_searchResult_1ae64_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <span class="_searchResultTitle_1ae64_28">
              </span>
              Litium
            </li>
            <li class="_searchResult_1ae64_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <span class="_searchResultTitle_1ae64_28">
              </span>
              Beryllium
            </li>
            <li class="_searchResult_1ae64_1"
                tabindex="0"
                role="option"
                aria-selected="true"
            >
              <span class="_searchResultTitle_1ae64_28">
              </span>
              Bor
            </li>
          </ul>
        </div>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r25:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r25:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlid"
       class="_topContainer_hryzl_11   dummyClassname"
       lang="nb"
  >
    <label id="htmlid-label"
           class="_label_348na_5"
           for="htmlid-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="htmlid-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="htmlid-input"
               class="_input_hryzl_42"
               data-testid="123ID"
               form="123form"
               aria-describedby="htmlid-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomButtonTitleText play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1t:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1t:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1t:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1t:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1t:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1t:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        search test
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomButtonTitles play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1p:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1p:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1p:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1p:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1p:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1p:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
        <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  _clearButton_hryzl_35"
                type="reset"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1r:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1r:">
              clear test
            </title>
            <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1s:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1s:">
            search test
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r6:"
       class="_topContainer_hryzl_11    dummyClassname"
  >
    <label id="searchField-:r6:-label"
           class="_label_348na_5    dummyClassname"
           for="searchField-:r6:-input"
    >
      Leter du etter en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG gjenstand?
    </label>
    <div class="_searchContainer_hryzl_5 dummyClassnameFormContainer">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r6:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r6:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r6:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r8:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r8:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1a:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1a:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1a:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1a:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1a:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1a:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
        <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  _clearButton_hryzl_35"
                type="reset"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1c:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1c:">
              Nullstill
            </title>
            <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1d:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1d:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1e:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1e:-label"
           class="_label_348na_5"
           for="searchField-:r1e:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1e:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1e:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1e:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1g:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1g:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r13:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r13:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r13:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r13:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r13:-input"
               class="_input_hryzl_42"
               disabled
               aria-describedby="searchField-:r13:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95"
              disabled
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r15:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r15:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1v:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1v:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1v:-input"
    >
      Søk har blitt aktivert med enter
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1v:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1v:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1v:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r21:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r21:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1h:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1h:-label"
           class="_label_348na_5"
           for="searchField-:r1h:-input"
    >
      Hva leter du etter?
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="searchField-:r1h:-label"
            aria-expanded="true"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_10ldw_31">
      <span class="_helpBoxText_10ldw_44">
        Hjelpetekst
      </span>
      <button class="_button_g87u5_1 _button_small_g87u5_37  _helpBoxCloseButton_10ldw_51"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1l:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1l:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1h:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1h:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r1h:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1k:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1k:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r29:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r29:-label"
           class="_label_348na_5"
           for="searchField-:r29:-input"
    >
      Hva leter du etter?
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="searchField-:r29:-label"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2b:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2b:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r29:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r29:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r29:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2c:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2c:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithLongLabel smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r9:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r9:-label"
           class="_label_348na_5"
           for="searchField-:r9:-input"
    >
      Leter du etter en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG gjenstand?
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="searchField-:r9:-label"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rb:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rb:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17">
      Med en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG beskrivelse?
    </div>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r9:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r9:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r9:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rc:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rc:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1m:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r1m:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1m:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r1m:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1m:-input"
               class="_input_hryzl_42"
               name="test_name"
               placeholder="skattekort"
               aria-describedby="searchField-:r1m:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1o:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1o:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithRef play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r0:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r0:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r0:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r0:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r0:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r0:-srFocus"
               type="search"
               value
               name="dummyNameForwardedFromRef"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithValue play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r16:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:r16:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r16:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:r16:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r16:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:r16:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
        <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  _clearButton_hryzl_35"
                type="reset"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r18:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r18:">
              Nullstill
            </title>
            <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r19:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r19:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariantLargeAndLongText smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rv:"
       class="_topContainer_hryzl_11 _topContainer_large_hryzl_20"
  >
    <label id="searchField-:rv:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rv:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rv:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rv:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rv:-srFocus"
               type="search"
               value="En lang tekst som ikke skal synes bak reset-ikonet"
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
        <button class="_button_g87u5_1 _button_small_g87u5_37  _clearButton_hryzl_35"
                type="reset"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r11:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r11:">
              Nullstill
            </title>
            <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_hryzl_95 _searchButton_large_hryzl_118">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r12:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r12:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariants smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rg:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:rg:-label"
           class="_label_348na_5"
           for="searchField-:rg:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rg:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rg:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rg:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ri:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ri:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div id="searchField-:rj:"
       class="_topContainer_hryzl_11 _topContainer_large_hryzl_20"
  >
    <label id="searchField-:rj:-label"
           class="_label_348na_5"
           for="searchField-:rj:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rj:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rj:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rj:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95 _searchButton_large_hryzl_118">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rl:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rl:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
  <div id="searchField-:rm:"
       class="_topContainer_hryzl_11  _topContainer_extraLarge_hryzl_26"
  >
    <label id="searchField-:rm:-label"
           class="_label_348na_5"
           for="searchField-:rm:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rm:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rm:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rm:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95  _searchButton_extraLarge_hryzl_126">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_hryzl_114"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariantsNoIcon smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rp:"
       class="_topContainer_hryzl_11"
  >
    <label id="searchField-:rp:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rp:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rp:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rp:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rp:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95">
        Søk
      </button>
    </div>
  </div>
  <div id="searchField-:rr:"
       class="_topContainer_hryzl_11 _topContainer_large_hryzl_20"
  >
    <label id="searchField-:rr:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rr:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rr:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rr:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rr:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95 _searchButton_large_hryzl_118">
        Søk
      </button>
    </div>
  </div>
  <div id="searchField-:rt:"
       class="_topContainer_hryzl_11  _topContainer_extraLarge_hryzl_26"
  >
    <label id="searchField-:rt:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rt:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_hryzl_5 ">
      <div class="_inputWrapper_hryzl_42">
        <span id="searchField-:rt:-srFocus"
              class="_srOnly_hryzl_180"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rt:-input"
               class="_input_hryzl_42"
               aria-describedby="searchField-:rt:-srFocus"
               type="search"
               value
        >
        <span aria-live="assertive"
              class="_srOnly_hryzl_180"
        >
        </span>
      </div>
      <button class="_searchButton_hryzl_95  _searchButton_extraLarge_hryzl_126">
        Søk
      </button>
    </div>
  </div>
</div>
`;
